<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="28sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_input1"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextInput1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="end"
                android:hint="Enter first number"
                android:inputType="numberSigned|number|numberDecimal"
                android:padding="4dp"
                android:textSize="24sp"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_input2"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextInput2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="end"
                android:hint="0"
                android:inputType="numberSigned|numberDecimal"
                android:padding="4dp"
                android:textSize="24sp"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/radio_button_add"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonSubtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/radio_button_subtract"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/radio_button_multiply"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/radio_button_divide"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_result"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_result_after_rounding"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textResultRounded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_decimal_formatted"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="clearForm"
                android:paddingLeft="2dp"
                android:paddingTop="4dp"
                android:paddingRight="2dp"
                android:paddingBottom="4dp"
                android:text="@string/button_clear"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="calculate"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:paddingBottom="4dp"
                android:text="@string/button_calculate"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>


</LinearLayout>